<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/push_notification_header">
        <SwitchPreferenceCompat
            app:key="drink_water_notifications"
            app:title="@string/drink_water_notifications"
            app:summaryOff="@string/drink_water_summary_off"
            app:summaryOn="@string/drink_water_summary_on"
            app:defaultValue="true"
            />

        <SwitchPreferenceCompat
            app:key="appreciation_notifications"
            app:title="@string/appreciation_notifications"
            app:summaryOff="@string/appreciation_summary_off"
            app:summaryOn="@string/appreciation_summary_on"
            app:defaultValue="true"
            />

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->
    </PreferenceCategory>
    <PreferenceCategory app:title="Hydration">
        <EditTextPreference
            app:key="goal_sips"
            app:title="Daily Hydration Goal"
            app:dialogTitle="Set Daily Sip Goal"
            app:defaultValue="8"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>